--- a/styles/index.css
+++ b/styles/index.css
@@ -39,9 +39,11 @@ body > header {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 1rem 1.25rem; }
+    padding: 1rem 1.25rem;
+    padding-top: 2rem; }
     @media (min-width: 44em) {
       body > header h1 {
+        padding-top: 1rem;
         justify-content: flex-start;
         flex: auto; } }
     body > header h1 img {
@@ -84,10 +86,13 @@ body > footer {
 
 body > article {
   width: 100vw;
-  background: url(h3.png) no-repeat center center;
+  background: black url(h3.png) no-repeat center center;
   background-attachment: fixed;
   background-size: cover;
   padding: 1.2rem; }
+  @supports (-webkit-overflow-scrolling: touch) {
+    body > article {
+      background-attachment: scroll; } }
   @media (min-width: 44em) {
     body > article {
       height: 100vh;
@@ -99,7 +104,7 @@ body > article {
       display: grid;
       justify-items: center;
       align-items: center;
-      grid-gap: 2.4rem 2.4rem;
+      grid-gap: 1.2rem 1.2rem;
       grid-template-rows: repeat(2, 1fr);
       grid-template-columns: repeat(2, 1fr); } }
   body > article .branches .branch {
@@ -111,6 +116,44 @@ body > article {
     @media (min-width: 44em) {
       body > article .branches .branch {
         margin: 0; } }
+    body > article .branches .branch > section {
+      min-height: 14rem;
+      background: rgba(255, 255, 255, 0.95);
+      color: black;
+      padding: 1.2rem 1.2rem; }
+      body > article .branches .branch > section h2 {
+        font-size: 3.6rem;
+        letter-spacing: -.05em;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin: 0;
+        line-height: 1.5; }
+      body > article .branches .branch > section p {
+        text-align: center;
+        font-size: 1.2rem;
+        line-height: 1.5;
+        margin: 0;
+        margin-bottom: 1.2rem;
+        padding: 0 1.2rem; }
+      body > article .branches .branch > section ul {
+        border-top: 1px solid #eee;
+        list-style: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 1.2rem 1.2rem 0; }
+        body > article .branches .branch > section ul li {
+          color: #bbb;
+          font-style: italic;
+          padding: 0 1.2rem 1.2rem;
+          line-height: 1.2; }
+          body > article .branches .branch > section ul li a {
+            transition: all .2s ease-in;
+            color: #444;
+            font-style: normal;
+            font-weight: 500; }
     @media (min-width: 44em) {
       body > article .branches .branch.design {
         justify-self: end;
@@ -147,44 +190,6 @@ body > article {
         body > article .branches .branch.press > section {
           border-top-right-radius: 3.6rem;
           border-bottom-left-radius: 3.6rem; } }
-    body > article .branches .branch > section {
-      min-height: 14rem;
-      background: white;
-      color: black;
-      padding: 2.4rem 2.4rem; }
-      body > article .branches .branch > section h2 {
-        font-size: 3.6rem;
-        letter-spacing: -.05em;
-        font-weight: 400;
-        text-transform: uppercase;
-        margin: 0;
-        line-height: 1.5; }
-      body > article .branches .branch > section p {
-        text-align: center;
-        font-size: 1.2rem;
-        line-height: 1.5;
-        margin: 0;
-        margin-bottom: 2.4rem; }
-      body > article .branches .branch > section ul {
-        border-top: 1px solid #eee;
-        list-style: none;
-        text-transform: uppercase;
-        font-weight: 400;
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 1.2rem;
-        padding-top: 2.4rem; }
-        body > article .branches .branch > section ul li {
-          color: #bbb;
-          font-style: italic;
-          padding: 0 1.2rem 1.2rem;
-          line-height: 1; }
-          body > article .branches .branch > section ul li a {
-            transition: all .2s ease-in;
-            color: #444;
-            font-style: normal;
-            font-weight: 500; }
 
 body > footer {
   display: flex;
@@ -194,11 +199,10 @@ body > footer {
   color: white;
   font-size: 0.8rem;
   text-transform: uppercase;
-  padding: 2.4rem 3.6rem; }
+  padding: 1.2rem 3.6rem; }
   @media (min-width: 44em) {
     body > footer {
       flex-direction: row;
-      padding: 2.4rem 3.6rem;
       background: linear-gradient(5deg, black, rgba(0, 0, 0, 0.85)); } }
   body > footer a {
     color: white;
