--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,8 @@ body {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll; }
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; }
 
 @media (min-width: 44em) and (min-height: 44em) {
   .root > header,
