--- a/styles/index.css
+++ b/styles/index.css
@@ -43,7 +43,9 @@ body {
   justify-content: stretch;
   text-transform: uppercase;
   transition: all .25s ease-in;
-  background: black; }
+  background: rgba(255, 255, 255, 0.95); }
+  .root > header:hover {
+    background: white; }
   @media (min-width: 44em) and (min-height: 44em) {
     .root > header {
       top: 0;
@@ -54,11 +56,10 @@ body {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 1rem 1.25rem;
-    padding-top: 2rem; }
+    padding: 2rem 2.5rem; }
     @media (min-width: 44em) and (min-height: 44em) {
       .root > header h1 {
-        padding-top: 1rem;
+        padding-top: 2rem;
         justify-content: flex-start;
         flex: auto; } }
     .root > header h1 img {
@@ -70,30 +71,25 @@ body {
     margin: 0;
     padding: 0; }
     .root > header menu a {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       flex: auto;
       text-align: right;
       display: block;
-      padding: 1rem 2rem;
-      color: white;
+      padding: 1rem;
+      color: black;
       font-weight: bold;
       height: 4rem;
       line-height: 2rem;
       transition: all .2s ease-in; }
+      @media (min-width: 44em) and (min-height: 44em) {
+        .root > header menu a {
+          height: 6rem;
+          padding: 2rem; } }
       .root > header menu a:last-child {
         text-align: left; }
       .root > header menu a:hover {
-        background: white;
-        color: black; }
-  @media (min-width: 44em) and (min-height: 44em) {
-    .root > header {
-      background: rgba(0, 0, 0, 0.5); } }
-  .root > header a {
-    opacity: .5; }
-  .root > header:hover {
-    background: black; }
-    .root > header:hover a {
-      opacity: 1; }
+        background: black;
+        color: white; }
 
 .root > footer {
   bottom: 0;
@@ -105,7 +101,7 @@ body {
   padding: 1.2rem; }
   @media (min-width: 44em) and (min-height: 44em) {
     .root > article {
-      padding: calc(4rem + 1.2rem) 1.2rem calc(10rem + 1.2rem);
+      padding: calc(6rem + 1.2rem) 1.2rem calc(12rem + 1.2rem);
       display: flex;
       justify-content: center;
       align-items: center; } }
@@ -131,9 +127,12 @@ body {
       min-height: 14rem;
       background: rgba(255, 255, 255, 0.95);
       color: black;
-      padding: 1.2rem 1.2rem; }
+      padding: 1.2rem 1.2rem;
+      transition: all .2s ease-in; }
+      .root > article .branches .branch > section:hover {
+        background: white; }
       .root > article .branches .branch > section h2 {
-        font-size: 3.6rem;
+        font-size: 2rem;
         letter-spacing: -.05em;
         font-weight: 400;
         text-transform: uppercase;
@@ -141,7 +140,7 @@ body {
         line-height: 1.5; }
       .root > article .branches .branch > section p {
         text-align: center;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         line-height: 1.5;
         margin: 0;
         margin-bottom: 1.2rem;
@@ -150,6 +149,7 @@ body {
         border-top: 1px solid #eee;
         list-style: none;
         text-transform: uppercase;
+        font-size: 0.8rem;
         font-weight: 400;
         display: flex;
         flex-direction: column;
@@ -158,11 +158,11 @@ body {
         .root > article .branches .branch > section ul li {
           color: #bbb;
           font-style: italic;
-          padding: 0 1.2rem 1.2rem;
+          padding: 0 1.2rem 0.6rem;
           line-height: 1.2; }
           .root > article .branches .branch > section ul li a {
             transition: all .2s ease-in;
-            color: #444;
+            color: rgba(0, 0, 0, 0.5);
             font-style: normal;
             font-weight: 500; }
     @media (min-width: 44em) and (min-height: 44em) {
@@ -170,8 +170,8 @@ body {
         justify-self: end;
         align-self: end; }
         .root > article .branches .branch.design > section {
-          border-top-right-radius: 3.6rem;
-          border-bottom-left-radius: 3.6rem; } }
+          border-top-right-radius: 8rem;
+          border-bottom-left-radius: 8rem; } }
     .root > article .branches .branch.design h2, .root > article .branches .branch.design a:hover {
       color: #00C1FF; }
     .root > article .branches .branch.studio h2, .root > article .branches .branch.studio a:hover {
@@ -181,8 +181,8 @@ body {
         justify-self: start;
         align-self: end; }
         .root > article .branches .branch.studio > section {
-          border-top-left-radius: 3.6rem;
-          border-bottom-right-radius: 3.6rem; } }
+          border-top-left-radius: 8rem;
+          border-bottom-right-radius: 8rem; } }
     .root > article .branches .branch.trade h2, .root > article .branches .branch.trade a:hover {
       color: #FFBE00; }
     @media (min-width: 44em) and (min-height: 44em) {
@@ -190,8 +190,8 @@ body {
         justify-self: end;
         align-self: start; }
         .root > article .branches .branch.trade > section {
-          border-top-left-radius: 3.6rem;
-          border-bottom-right-radius: 3.6rem; } }
+          border-top-left-radius: 8rem;
+          border-bottom-right-radius: 8rem; } }
     .root > article .branches .branch.press h2, .root > article .branches .branch.press a:hover {
       color: black; }
     @media (min-width: 44em) and (min-height: 44em) {
@@ -199,84 +199,63 @@ body {
         justify-self: start;
         align-self: start; }
         .root > article .branches .branch.press > section {
-          border-top-right-radius: 3.6rem;
-          border-bottom-left-radius: 3.6rem; } }
+          border-top-right-radius: 8rem;
+          border-bottom-left-radius: 8rem; } }
 
 .root > footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: black;
+  background: rgba(0, 0, 0, 0.95);
   color: white;
   font-size: 0.8rem;
   text-transform: uppercase;
   padding: 1.2rem 3.6rem; }
   @media (min-width: 44em) and (min-height: 44em) {
     .root > footer {
+      display: flex;
       flex-direction: row;
-      background: linear-gradient(5deg, black, rgba(0, 0, 0, 0.85)); } }
+      flex-direction: row-reverse; } }
   .root > footer a {
     color: white;
     display: block;
     padding: 0.3rem 0.6rem;
     text-transform: uppercase; }
   .root > footer aside {
-    display: block;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 1.2rem 0; }
-    .root > footer aside.external {
-      justify-content: flex-start; }
-      .root > footer aside.external img {
-        opacity: .5;
-        height: 2.4rem; }
-      .root > footer aside.external .kii {
-        width: 100%; }
-      .root > footer aside.external .linkedin, .root > footer aside.external .github {
-        height: 0;
-        width: 2.4rem;
-        overflow: hidden;
-        padding: 2.4rem 0 0 0;
-        margin-left: 2.4rem;
-        background-size: contain;
-        opacity: .35;
-        transition: all .2s ease-in; }
-        .root > footer aside.external .linkedin:hover, .root > footer aside.external .github:hover {
-          opacity: 1; }
-      .root > footer aside.external .linkedin {
-        background: url(../linkedin.svg) no-repeat center center;
-        background-size: 90% auto; }
-      .root > footer aside.external .github {
-        background: url(../github.svg) no-repeat center center;
-        background-size: 90% auto; }
-    .root > footer aside.meta {
+    @media (min-width: 44em) and (min-height: 44em) {
+      .root > footer aside.external {
+        justify-content: flex-end; } }
+    .root > footer aside.external img {
+      opacity: .15;
+      height: 6rem; }
+    .root > footer aside.external .kii {
+      width: 100%; }
+    .root > footer aside.external .linkedin {
+      background: url(../linkedin.svg) no-repeat center center;
+      background-size: 90% auto; }
+    .root > footer aside.external .github {
+      background: url(../github.svg) no-repeat center center;
+      background-size: 90% auto; }
+    @media (min-width: 44em) and (min-height: 44em) {
+      .root > footer aside.meta {
+        display: flex;
+        justify-content: flex-start; } }
+    .root > footer aside.meta .content {
       font-size: 0.8rem;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center; }
-      @media (min-width: 44em) and (min-height: 44em) {
-        .root > footer aside.meta {
-          flex: auto;
-          justify-content: flex-end;
-          align-items: flex-end;
-          padding-left: 1.2rem; } }
-      .root > footer aside.meta p {
-        margin: 0;
-        opacity: .5; }
-      .root > footer aside.meta .location {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; }
+      .root > footer aside.meta .content img {
+        opacity: 1;
+        height: 1.1rem;
+        margin: 0.6rem 0; }
         @media (min-width: 44em) and (min-height: 44em) {
-          .root > footer aside.meta .location {
-            margin-left: 1.2rem; } }
-        .root > footer aside.meta .location img {
-          opacity: 1;
-          height: 1.2rem;
-          margin: 0.6rem 0; }
-          @media (min-width: 44em) and (min-height: 44em) {
-            .root > footer aside.meta .location img {
-              margin-right: 1.2rem; } }
+          .root > footer aside.meta .content img {
+            margin-right: 1.2rem; } }
+      .root > footer aside.meta .content p {
+        margin: 0;
+        opacity: .25; }
