--- a/styles/index.css
+++ b/styles/index.css
@@ -97,7 +97,8 @@ body {
 
 .root > article {
   width: 100vw;
-  min-height: 100vh; }
+  min-height: 100vh;
+  padding-bottom: 1.2rem; }
   @media (min-width: 44em) and (min-height: 44em) {
     .root > article {
       padding: calc(6rem + 1.2rem) 1.2rem calc(12rem + 1.2rem);
