--- a/styles/beta.css
+++ b/styles/beta.css
@@ -84,49 +84,46 @@ a {
         color: white; }
 
 aside.tagline {
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
-  position: relative; }
-  aside.tagline > * {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem 0; }
+  aside.tagline aside {
     display: block;
+    background: #010101 url(/jon_jungle.jpg) no-repeat center center;
+    background-size: cover;
+    max-width: 1024px;
+    margin: 0 auto;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0; }
-  aside.tagline aside {
-    background: black url(/jon_jungle.jpg) no-repeat center center;
-    background-size: cover; }
+    left: 0;
+    z-index: 1; }
   aside.tagline p {
-    margin-top: -8rem;
+    z-index: 2;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    margin-top: -8rem; }
     aside.tagline p span {
       background: rgba(0, 0, 0, 0.75);
       color: white;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       text-shadow: 0 0 1rem black;
-      max-width: 18em;
       line-height: 1.4;
       font-weight: 400;
-      padding: 1rem 2rem;
+      padding: 2rem 2rem;
       margin-top: -2rem;
-      text-align: left; }
+      text-align: center; }
       @media (min-width: 44em) and (min-height: 44em) {
         aside.tagline p span {
-          font-size: 4vw;
-          max-width: 76vw;
+          font-size: 3vw;
+          max-width: 80vw;
           text-align: justify; } }
-
-h2 {
-  position: relative; }
-  h2 span {
-    font-size: .5em;
-    font-weight: 500;
-    line-height: 1;
-    display: block;
-    color: rgba(0, 0, 0, 0.25); }
 
 .root > article {
   background: #eee;
@@ -139,7 +136,7 @@ h2 {
       align-items: center; } }
   .root > article .branches {
     z-index: 2;
-    padding: 2rem 0;
+    padding: 2rem 0 4rem;
     margin: 0 auto;
     max-width: 64rem;
     display: flex;
@@ -151,10 +148,13 @@ h2 {
     .root > article .branches img.aside {
       z-index: 1;
       position: relative;
-      width: 75%;
+      width: 100%;
       height: auto;
       min-height: 22rem;
       object-fit: cover; }
+      @media (min-width: 44em) and (min-height: 44em) {
+        .root > article .branches img.aside {
+          width: 75%; } }
       .root > article .branches img.aside.desktop {
         align-self: flex-end; }
       .root > article .branches img.aside.table {
@@ -183,8 +183,9 @@ h2 {
           .root > article .branches .branch > section {
             align-items: flex-start; } }
         .root > article .branches .branch > section h2 {
+          position: relative;
           text-align: center;
-          font-size: 3rem;
+          font-size: 4rem;
           letter-spacing: -.05em;
           font-weight: 400;
           text-transform: uppercase;
@@ -192,100 +193,122 @@ h2 {
           line-height: 1;
           transition: all .2s ease-in;
           width: 100%;
-          padding: 2rem 2rem 0;
+          padding: 3rem 3rem 0;
           color: black; }
+          .root > article .branches .branch > section h2 span {
+            font-size: .5em;
+            font-weight: 500;
+            line-height: 1;
+            display: block;
+            color: black;
+            height: 0;
+            width: 100%;
+            padding: .65em 0 0 0;
+            overflow: hidden;
+            color: transparent;
+            background: url(/kuokoa.svg) no-repeat center center;
+            background-size: contain;
+            opacity: 1; }
+            @media (min-width: 44em) and (min-height: 44em) {
+              .root > article .branches .branch > section h2 span {
+                width: 6em;
+                background-position: .15em center; } }
           @media (min-width: 44em) and (min-height: 44em) {
             .root > article .branches .branch > section h2 {
               text-align: left; } }
         .root > article .branches .branch > section p {
           text-align: center;
           font-weight: 400;
-          font-size: 1.4rem;
+          font-size: 1.2rem;
           line-height: 1.4;
           margin: 0;
-          padding: 2rem;
-          max-width: 18em; }
+          padding: 1rem 3rem 2rem;
+          max-width: 20em;
+          color: rgba(0, 0, 0, 0.65); }
           @media (min-width: 44em) and (min-height: 44em) {
             .root > article .branches .branch > section p {
               text-align: left; } }
         .root > article .branches .branch > section ul {
           transition: all .2s ease-in;
           list-style: none;
-          font-size: .8em;
+          font-size: 1em;
           font-weight: 500;
           display: flex;
           flex-direction: column;
           margin: 0;
-          padding: 0 2rem 2rem; }
+          padding: 0 3rem 3rem; }
           @media (min-width: 44em) and (min-height: 44em) {
             .root > article .branches .branch > section ul {
               flex-direction: row; } }
           .root > article .branches .branch > section ul li {
-            color: #bbb;
+            color: rgba(0, 0, 0, 0.25);
             transition: all .2s ease-in;
             font-style: italic;
-            padding: 0 2.4rem 0.6rem;
-            line-height: 1.2; }
+            padding-bottom: .5rem;
+            line-height: 1.4; }
             @media (min-width: 44em) and (min-height: 44em) {
               .root > article .branches .branch > section ul li {
-                padding-left: 0; } }
+                padding-bottom: 0;
+                padding-right: 2rem;
+                text-align: left;
+                white-space: nowrap; } }
             .root > article .branches .branch > section ul li a {
               transition: all .2s ease-in;
               color: rgba(0, 0, 0, 0.75);
               font-style: normal;
-              border-bottom: 1px solid rgba(0, 0, 0, 0.25); }
+              border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
       .root > article .branches .branch.design {
-        align-self: flex-start;
         margin-bottom: -2rem; }
         @media (min-width: 44em) and (min-height: 44em) {
-          .root > article .branches .branch.design > section {
-            border-bottom-right-radius: 0; } }
+          .root > article .branches .branch.design {
+            margin-left: 2rem;
+            align-self: flex-start; }
+            .root > article .branches .branch.design > section {
+              border-bottom-right-radius: 0; } }
         .root > article .branches .branch.design h2 {
           color: #00C1FF;
           border-color: #00C1FF; }
         .root > article .branches .branch.design a:hover {
           color: #00C1FF; }
       .root > article .branches .branch.studio {
-        align-self: flex-start;
-        margin-top: -4rem; }
+        margin-top: -2rem; }
         @media (min-width: 44em) and (min-height: 44em) {
-          .root > article .branches .branch.studio > section {
-            border-top-right-radius: 0; } }
+          .root > article .branches .branch.studio {
+            margin-top: -4rem;
+            margin-left: 6rem;
+            align-self: flex-start; }
+            .root > article .branches .branch.studio > section {
+              border-top-right-radius: 0; } }
         .root > article .branches .branch.studio h2 {
           color: #FF0081;
           border-color: #FF0081; }
         .root > article .branches .branch.studio a:hover {
           color: #FF0081; }
       .root > article .branches .branch.trade {
-        align-self: flex-end;
         margin-top: 2rem;
-        margin-bottom: -4rem; }
+        margin-bottom: -2rem; }
         @media (min-width: 44em) and (min-height: 44em) {
-          .root > article .branches .branch.trade > section {
-            border-bottom-left-radius: 0; } }
+          .root > article .branches .branch.trade {
+            margin-right: 2rem;
+            margin-bottom: -4rem;
+            align-self: flex-end; }
+            .root > article .branches .branch.trade > section {
+              border-bottom-left-radius: 0; } }
         .root > article .branches .branch.trade h2 {
           color: #FFBE00;
           border-color: #FFBE00; }
         .root > article .branches .branch.trade a:hover {
           color: #FFBE00; }
       .root > article .branches .branch.press {
-        align-self: flex-end;
         margin-top: -2rem; }
         @media (min-width: 44em) and (min-height: 44em) {
-          .root > article .branches .branch.press > section {
-            border-top-left-radius: 0; } }
+          .root > article .branches .branch.press {
+            margin-right: 6rem;
+            align-self: flex-end; }
+            .root > article .branches .branch.press > section {
+              border-top-left-radius: 0; } }
         .root > article .branches .branch.press a:hover {
           color: black; }
-      @media (min-width: 44em) and (min-height: 44em) {
-        .root > article .branches .branch.trade > section, .root > article .branches .branch.press > section {
-          align-items: flex-end; }
-        .root > article .branches .branch.trade h2, .root > article .branches .branch.trade p, .root > article .branches .branch.press h2, .root > article .branches .branch.press p {
-          text-align: right; }
-        .root > article .branches .branch.trade ul, .root > article .branches .branch.press ul {
-          justify-content: flex-end; }
-          .root > article .branches .branch.trade ul li, .root > article .branches .branch.press ul li {
-            padding-right: 0;
-            padding-left: 2.4rem; } }
 
 .root > footer {
   position: relative;
@@ -294,7 +317,7 @@ h2 {
   color: white;
   font-size: 2rem;
   text-transform: uppercase;
-  padding: 6rem 3.6rem; }
+  padding: 6rem 3.6rem 12rem; }
   @media (min-width: 44em) and (min-height: 44em) {
     .root > footer {
       display: flex;
